# a8-pico-sio

./: .gitignore  CMakeLists.txt  Makefile  README.md  atari_font_gen.py  atx.cpp  atx.hpp  boot_h.py  boot_loader.h  caslist.py  config.h  disk_boot.asm  disk_counter.cpp  disk_counter.h  disk_counter.hpp  disk_counter.pio  disk_images_data.h  dist.sh  fatfs_disk.c  fatfs_disk.h  file_load.cpp  file_load.hpp  flash_fs.c  flash_fs.h  font_atari_data.hpp  hw_config.c  io.cpp  io.hpp  led_indicator.cpp  led_indicator.hpp  main.cpp  mounts.cpp  mounts.hpp  msc_disk.c  myboard.h  options.cpp  options.hpp  pin_io.pio  sio.cpp  sio.hpp  (+3 more)
atrs/: dd_dos25.atr  dd_mydos.atr  dd_sdfs.atr  ed_dos25.atr  ed_mydos.atr  ed_sdfs.atr  qd_mydos.atr  qd_sdfs.atr  sd_dos25.atr  sd_mydos.atr  sd_sdfs.atr
fatfs/: diskio.c  ff.c  ffconf.h
firmware/: a8_pico1_sio_board.uf2  a8_pico1_sio_standalone.uf2  a8_pico2_sio_board.uf2  a8_pico2_sio_standalone.uf2  a8_pico2_sio_zaxon.uf2  a8_pimoroni16mb_sio_board.uf2  a8_pimoroni16mb_sio_standalone.uf2
sd_driver/: crc.c  crc.h  hw_config.h  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c  spi.h
